--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,3 +1,12 @@
 h1, h2, h3, h4, h5, h6 {
   background-image: none;
 }
+
+label {
+  /* text-transform: uppercase; */
+}
+
+.heading-label {
+  font-size: 20px;
+  margin-top: 16px;
+}
