--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,17 +3,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .global-header {
-  max-width: 1008px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
-#upload-form {
+#sharp-form, #upload-form {
   padding: 32px;
   background-color: #e9ecef;
   border-radius: 5px;
 }
 
 .heading-label {
+  text-transform: uppercase;
   font-size: 18px;
   margin-top: 8px;
 }
