--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="list-group">
-        <div class="row mb-2">
+        <div id="resize-results-section" class="row mb-4">
         {{#each images}}
           <div class="col-sm-6">
               <a
@@ -51,6 +51,16 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="list-group">
+        <div id="s3-results-section" class="row mb-4 d-none">
+          {{!-- ajax success/fail response functions render metadata returned from s3 here --}}
+        </div>
+      </div>
+    </div>
+  </div>
+
   <form id="upload-form" class="mt-4" name="upload-form">
     {{!-- SUBMIT BUTTON --}}
     <div class="form-group row">
@@ -62,6 +72,7 @@
     </div>  
     {{!-- SUBMIT BUTTON --}}
   </form>
+
 </div>
 
 
