--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -9,9 +9,12 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="list-group">
-        <div id="resize-results-section" class="row mb-4">
+        <div id="sharp-results-section" class="row mb-4">
+          <div class="col-sm-12">
+            <h2>Post-Processing Metadata:</h2>
+          </div>          
         {{#each images}}
-          <div class="col-sm-6">
+          <div class="col-sm-6 sharp-result-card">
               <a
                 href="/uploads/{{filename}}"
                 data-format="{{format}}"
@@ -23,7 +26,7 @@
                 style="text-transform: uppercase; font-size:20px;"
                 target="_blank"
               >
-                {{device}} image
+                {{device}} image <img src="/icons/box-arrow-up-right.svg" alt="external-link">
               </a>
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">
@@ -47,7 +50,7 @@
           </div>
         {{/each}}
         </div>
-      </div>
+    </div>
     </div>
   </div>
 
@@ -55,6 +58,9 @@
     <div class="col-sm-12">
       <div class="list-group">
         <div id="s3-results-section" class="row mb-4 d-none">
+          <div class="col-sm-12">
+            <h2>S3 Upload Response Metadata:</h2>
+          </div>            
           {{!-- ajax success/fail response functions render metadata returned from s3 here --}}
         </div>
       </div>
