--- a/views/images.hbs
+++ b/views/images.hbs
@@ -17,6 +17,43 @@
       </div>
     </div>
     <!-- Ends upload original image section -->
+    <!-- Begins Default Settings Checkbox section -->
+
+    <div class="form-group row">
+      <div class="col-sm-12">
+        <label class="heading-label">Lock Aspect Ratio</label>
+      </div>        
+      <div class="col-sm-12">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="aspect-lock" id="none" value="0" checked>
+          <label class="form-check-label" for="none">
+            No Lock
+          </label>
+        </div>        
+        <div class="form-check disabled">
+          <input class="form-check-input" type="radio" name="aspect-lock" id="aspect16" value="16:9">
+          <label class="form-check-label" for="aspect16">
+            [16:9]
+          </label>
+        </div>
+        <div class="form-check disabled">
+          <input class="form-check-input" type="radio" name="aspect-lock" id="aspect4" value="4:3">
+          <label class="form-check-label" for="aspect4">
+            [4:3]
+          </label>
+        </div>
+
+        <div class="form-check disabled">
+          <input class="form-check-input" type="radio" name="aspect-lock" id="aspect3" value="3:2">
+          <label class="form-check-label" for="aspect3">
+            [3:2]
+          </label>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Ends Default Settings Checkbox section -->
 
     <!-- Begins Large MediaFile section -->
     <div class="form-group row">
@@ -29,8 +66,6 @@
       <div class="col-sm-4">
         <input type="text" class="form-control" id="lgMediaWidth" name="lgMediaWidth" placeholder="1280">
       </div>
-    </div>
-    <div class="form-group row">
       <label for="lgMediaHeight" class="col-sm-2 col-form-label">Height</label>
       <div class="col-sm-4">
         <input type="text" class="form-control" id="lgMediaHeight" name="lgMediaHeight" placeholder="720">
@@ -49,8 +84,6 @@
       <div class="col-sm-4">
         <input type="text" class="form-control" id="mdMediaWidth" name="mdMediaWidth" placeholder="636">
       </div>
-    </div>
-    <div class="form-group row">
       <label for="mdMediaHeight" class="col-sm-2 col-form-label">Height</label>
       <div class="col-sm-4">
         <input type="text" class="form-control" id="mdMediaHeight" name="mdMediaHeight" placeholder="358">
@@ -69,8 +102,6 @@
       <div class="col-sm-4">
         <input type="text" class="form-control" id="smMediaWidth" name="smMediaWidth" placeholder="216">
       </div>
-    </div>
-    <div class="form-group row">
       <label for="smMediaHeight" class="col-sm-2 col-form-label">Height</label>
       <div class="col-sm-4">
         <input type="text" class="form-control" id="smMediaHeight" name="smMediaHeight" placeholder="122">
@@ -89,8 +120,6 @@
       <div class="col-sm-4">
         <input type="text" class="form-control" id="xsMediaWidth" name="xsMediaWidth" placeholder="132">
       </div>
-    </div>
-    <div class="form-group row">
       <label for="xsMediaHeight" class="col-sm-2 col-form-label">Height</label>
       <div class="col-sm-4">
         <input type="text" class="form-control" id="xsMediaHeight" name="xsMediaHeight" placeholder="74">
