--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,8 +35,8 @@
             </ul>
           </div>
           <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" disabled>
+            <button class="btn btn-outline-success my-2 my-sm-0 disabled" type="submit">Search</button>
           </form>          
         </nav>
     </header>
