Removed 'Search' from navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,10 +34,10 @@
               </li>
             </ul>
           </div>
-          <form class="form-inline">
+          {{!-- <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" disabled>
             <button class="btn btn-outline-success my-2 my-sm-0 disabled" type="submit">Search</button>
-          </form>          
+          </form>           --}}
         </nav>
     </header>
 
