removed indexRouter and index route

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,6 +29,9 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/images">Uploader<span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/search">Search</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
               </li>
