--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="/images">Uploader<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Uploader<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/search">Search</a>
