--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="/">Uploader<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/search">Search</a>
+                <a class="nav-link" href="/manage">Manage</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
