--- a/views/manage-dashboard.hbs
+++ b/views/manage-dashboard.hbs
@@ -14,7 +14,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">Prefix</span>
           </div>
-          <input type="text" class="form-control" aria-label="Prefix" aria-describedby="inputGroup-sizing-sm">
+          <input class="form-control" type="text" aria-label="Prefix" aria-describedby="inputGroup-sizing-lg" name="prefix" placeholder="YYYYMMDD">
         </div>
       </div>
     </div>
@@ -27,4 +27,10 @@
     </div>
     {{!-- SUBMIT BUTTON --}}
   </form>
+</div>
+
+<div class="container-fluid">
+  <div class="row s3-result-cards">
+    {{!-- Populated with "result-cards" from S3 --}}
+  </div>
 </div>
