Replace text field for running search with date and organized S3 in directories accordingly

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -67,4 +67,9 @@
 a.card-link-delete {
   color: #dc3545;
 }
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
 /* ***ends********************** */
