--- a/views/manage-dashboard.hbs
+++ b/views/manage-dashboard.hbs
@@ -12,9 +12,9 @@
       <div class="col-sm-12">
         <div class="input-group input-group-lg">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-sizing-lg">Prefix</span>
+            <span class="input-group-text" id="inputGroup-sizing-lg">Date</span>
           </div>
-          <input class="form-control" type="text" aria-label="Prefix" aria-describedby="inputGroup-sizing-lg" name="prefix" placeholder="YYYYMMDD">
+          <input class="form-control" type="date" aria-label="Date" aria-describedby="inputGroup-sizing-lg" name="date">
         </div>
       </div>
     </div>
