--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -55,6 +55,14 @@
   </div>
 
   <div class="row">
+    <div class="col-sm-12 d-flex justify-content-center">
+      <div id="loader-gif" class="d-none">
+        <img src="https://media.giphy.com/media/xTk9ZvMnbIiIew7IpW/giphy.gif" alt="loader-gif">
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-sm-12">
       <div class="list-group">
         <div id="s3-results-section" class="row mb-4 d-none">
