Added 'Manage' button/link to renderMetadata fn

--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -79,9 +79,12 @@
     {{!-- SUBMIT BUTTON --}}
     <div class="form-group row">
       <div class="col-sm-12">
-        <button type="submit" class="btn btn-info mt-4" name="submit">
+        <button id="upload-submit" type="submit" class="btn btn-info mt-4" name="submit">
           Upload
         </button>
+        <a id="upload-manage" href="/manage" class="btn btn-info mt-4 d-none">
+          Manage
+        </a>
       </div>
     </div>  
     {{!-- SUBMIT BUTTON --}}
